@@ -107,13 +107,7 @@ module ActiveScaffold::Actions
       if nested.child_association&.singular?
         record.send(:"#{nested.child_association.name}=", nested_parent_record)
       elsif nested.create_through_singular?
-        through = nested_parent_record.send(nested.association.through_reflection.name) ||
-                  nested_parent_record.send(:"build_#{nested.association.through_reflection.name}")
-        if nested.source_reflection.reverse_association.collection?
-          record.send(nested.source_reflection.reverse) << through
-        else
-          record.send(:"#{nested.source_reflection.reverse}=", through)
-        end
+        create_on_through_singular(record, nested.association, nested_parent_record)
       else
         record.send(nested.child_association.name) << nested_parent_record
       end
